# mcr-ai-insights

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
src/: __init__.py  analysis.py  build_panel.py  cli.py  config.py  export_panel.py  ingest_fred.py  ingest_mlr.py  mcr.py  mlr.py  quality.py
src/mcr_ai_insights/: __init__.py  analysis.py  build_panel.py  cli.py  config.py  export_panel.py  ingest_fred.py  ingest_mlr.py  mcr.py  quality.py
tests/: test_analysis.py  test_build_panel.py  test_export_panel.py  test_mcr.py
